Change datasize